Client (POST, DELETE, GET)

--- a/test-ui/src/main/resources/static/index.html
+++ b/test-ui/src/main/resources/static/index.html
@@ -12,12 +12,19 @@
 
 <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/css/app.css" />
+	<script src="app/consts.js"></script>
 
 </head>
 
-<body>
+<body ng-app="test">
 
-	<div ui-view></div>
+	<div class="container">
+		<div class="row">
+			<div>
+				<div id="mainContext" ui-view ></div>
+			</div>
+		</div>
+	</div>
 
 	<script src="/vendors/jquery/jquery-3.1.1.min.js"></script>
 	<script src="/vendors/bootstrap/bootstrap.min.js"></script>
@@ -25,8 +32,15 @@
 	<script src="/vendors/angular/angular-ui-router.min.js"></script>
 
 	<script src="/app/app.js"></script>
-	<script src="/app/app-controller.js"></script>
-	<script src="/app/app-route.js"></script>
+	<script src="/app/consts.js"></script>
+
+	<!-- module user -->
+	<script src="/app/user/user.js"></script>
+	<script src="/app/user/directives/user.directives.js"></script>
+	<script src="/app/user/interceptors/user-interceptor.js"></script>
+	<script src="/app/user/services/user-service.js"></script>
+	<script src="/app/user/controllers/user-controller.js"></script>
+
 
 </body>
 
